--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=ExamenFinal
+
+
+spring.datasource.url=jdbc:mysql:localhost/3306
+spring.datasource.username=root
+spring.datasource.password=""
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/docs/swagger-ui.html-size=60MB
